# libtwilio

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
cmake/: clang-tidy.cmake
include/twilio/: auth.h  magic.h  message.h  sms.h
tests/: CMakeLists.txt  sms_test.cpp
twilio/: CMakeLists.txt  sms.cpp
